--- a/advisory.html
+++ b/advisory.html
@@ -46,10 +46,10 @@
  <header class="header-bar">
  	<nav class="navbar navbar-expand-lg main-nav">
  		<div class="container">
-        <h5 class="mt-2 mb-2 left-align">6th International Conference on
+        <a href="index.html"><h5 class="mt-2 mb-2 left-align">6th International Conference on
           <br>
           Smart Computing and Informatics
-        </h5>
+        </h5></a>
  			</a>
 
  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -136,7 +136,7 @@
                   <ul class="list-inline">
                       <li class="list-inline-item"><a href="index.html">Home</a></li>
                       <li class="list-inline-item">/</li>
-                      <li class="list-inline-item"><a href="index.html">Committees</a></li>
+                      <li class="list-inline-item"><a href="index.html">Advisory</a></li>
                   </ul>
               </div>
           </div>
@@ -159,16 +159,47 @@
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
         <h4 class="mb-3 border-bottom pb-3">International Advisory Committee</h4>
-        <p style="font-size: larger;">........
-        </p>
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
+        <ul>
+          <li>Dr.Amira Ashour, Tanta University, Egypt</li>
+          <li>Dr. Aynur Unal, Standford University, USA </li>
+          
+   <li>Dr.  A. Govardhan, JNTU Hyderabad, Hyderabad, TS, India</li>
+   <li>Dr.  Akshay Sadananda Uppinakuu Pai, University of Copenhagen, Denmark</li>
+   <li>Dr.  Alok Aggarwal, UPES, Dehradun, India </li>
+   <li>Dr.  Anuja Arora, Jaypee Institute of Information Technology, Noida,India</li>
+   <li>Dr.  Ayush Goyal, Texas A&amp;M University, Kingsville, Texas</li>
+   <li>Dr. Banshidhar Majhi, IIITDM Kancheepuram, Tamilnadu, India</li>
+   <li>Dr.  B. Sujatha, Osmania University, Hyderabad, TS, India</li>
+   <li>Dr. Chintan Bhatt, Chandubhai Patel Institute of Technology, Gujarat, India</li>
+   <li>Dr.  D Ravi, IDRBT, Hyderabad, TS, India</li>
+   <li>Dr.  Divakar Yadav, MMMUT, Gorakhpur, India</li>
+   <li>Dr.  DVLN Somayajulu, IIIT, Kurnool, AP, India</li>
+   <li>Dr.  JVR Murthy, JNTU Kakinada, AP, India</li>
+   <li>Dr.  K.C. Santosh, The University of South Dakota, South Dakota</li>
+   <li>Dr.  Kailash C Patidar, University of the Western Cape, Cape Town, South Africa</li>
+   <li>Dr.  Kuda Nageswar Rao, Andhra University,Visakhapatnam, AP, India</li>
+   <li> Dr. Le Hoang Son, Vietnam National University, Hanoi, Vietnam</li>
+   <li>Dr.  M. A. Hameed, Osmania University, Hyderabad, TS, India</li>
+   <li>Dr.  M. Ramakrishna Murthy, ANITS, Visakhapatnam, AP, India</li>
+   <li>Dr.  Munesh Chana Trivedi, ABES Engg College, Ghazibad, UP, India</li>
+   <li>Dr.  Naeem Hanoon, Universiti Teknologi Mara, Shah Alam, Malaysia</li>
+   
+   <li>Dr.  P. V. Sudha, Osmania University, Hyderabad, TS, India</li>
+   
+   <li>Dr.  R.B.V. Subramaanyam, NITW, Warangal, TS, India</li>
+   <li>Dr.  Rammohan, Kyungpook National University, South Korea</li>
+   <li> Dr. Roman Senkerik,Tomas Bata University in Zlin, Czech Republic</li>
+   <li>Dr.  S G Sanjeevi, Professor, NITW, Warangal, TS, India</li>
+   <li>Dr.  Sanjay Sengupta, CSIR, New Delhi, India</li>
+   <li>Dr.  Siba Udgata, HCU, Hyderabad, TS, India</li>
+   <li>Dr.  Sobhan Babu,IIT Hyderabad, TS, India</li>
+   <li>Dr.  Suberna Kumar, MVGR,Vizayanagaram, AP, India</li>
+   <li>Dr. Suresh Chandra Satapathy, KIIT DU, Bhubaneswar</li>
+   
+   <li>Dr.  Vimal Kumar, The University of Waikato, New Zealand</li>
+   
+   <li> Dr. Yu-Dong Zhang, University of Leicester, UK</li>
+   </ul>
       </div>
       
 
